# Disagg-mlir

./: README.md  mac-m1-command
lib/polygeist/Passes/: CMakeLists.txt  ConvertPolygeistToLLVM.cpp
tools/: CMakeLists.txt
tools/cgeist/: driver.cc
tools/cgeist/Lib/: CGCall.cc  clang-mlir.cc  clang-mlir.h
tools/disagg/: .gitignore  CMakeLists.txt  README.md
tools/disagg/example/: gemm.ll  gemm.llvm.mlir  gemm.lower.mlir
tools/disagg/example/debug/: alloca.mlir  (+1 more)
tools/disagg/lib/Conversion/: AffineDisaggPatterns.cpp  ArithDisaggPatterns.cpp  CMakeLists.txt  FuncDisaggPatterns.cpp  LLVMDisaggPatterns.cpp  MemDisagg.cpp  MemRefDisaggPatterns.cpp  PassDetail.h  SCFDisaggPatterns.cpp  TrivialDisaggPatterns.cpp  VectorDisaggPatterns.cpp
tools/disagg/lib/Conversion/BltFuncSigDisagg/: BltFuncSigDisagg.cpp  CMakeLists.txt
tools/disagg/lib/Conversion/Common/: CMakeLists.txt  ConversionTarget.cpp  PatternBase.cpp  TypeConverter.cpp
tools/disagg/lib/Conversion/LLVMDisagg/: CMakeLists.txt  LLVMDisagg.cpp
tools/disagg/lib/Conversion/MemRefDisagg/: CMakeLists.txt  MemRefDisagg.cpp
tools/disagg/origin/: SSSP.c  abi-comp-test.c  alloctest.c  base16.mlir  forloop.c  heap_only.c  new_test.cc  print.c  print.mlir  recur-mod.c  recur.c  round-trip.sh  simple-mod.c  simple-pg.c  simple.c  sssp  test.c  testcpp.ast  testcpp.cc  testcpp.cc0  testcpp.ll  testcpp.mlir  testcpp_aft.mlir  testcpp_poly.ast  testcpp_poly.txt  util.h  vart.cc
tools/disagg/pldisagg/: driver.cpp
tools/disagg/standalone-opt/: CMakeLists.txt
tools/disagg/standalone-pg/: CMakeLists.txt  driver.cpp
(+281 files in other folders)
